# MCPVOTS

./: .ai-config  .env.agi  .env.example  .eslintrc.json  .gitconfig.ai  .gitignore  .gitmessage  AI_DEVELOPMENT_GUIDE.md  BUILD_SUCCESS_REPORT_JUNE_25_2025.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CODESPACE_LAUNCH_GUIDE.md  COMMIT_MESSAGE.txt  COMPLETE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_ARCHITECTURE.md  COMPREHENSIVE_WORKSPACE_ANALYSIS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DUAL_WALLET_TRADING_README.md  Dockerfile  ECOSYSTEM_ARCHITECTURE.md  ECOSYSTEM_VALUE_ANALYSIS.md  ELECTRON_MEMORY_OPTIMIZATION_README.md  ENHANCED_FLAUNCH_API_WITH_BURNS.md  EXECUTIVE_SUMMARY_COMPLETE_ANALYSIS.md  FINAL_ITERATION_SUMMARY_20250625_201335.md  FINAL_MODERNIZATION_REPORT.md  FLAUNCH_ANALYSIS_README.md  FLAUNCH_TOKEN_CREATOR_README.md  GITHUB_ACTIONS_AGI_INTEGRATION.md  GITHUB_PRO_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  IPFS_MINING_README.md  LICENSE  LimitOrderAPIs.yaml  MAXX_Ecosystem_Diagram.md  MCPVOTS_COMPREHENSIVE_UPDATE_REPORT_JUNE_25_2025.md  MEMORY_MCP_INTEGRATION_SUMMARY.md  Makefile  (+228 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.githooks/: post-commit  pre-commit
.github/: CODESPACE_SETUP.md  pull_request_template.md
DASHBOARD/: MATRIX_DASHBOARD_ULTRA.html  MATRIX_DASHBOARD_ULTRA_BACKUP.html  README.md  data-connector.js  enhanced-data-connector.js  enhanced-main.js  index.html  main.js  package-lock.json  package.json  server.js
MCPVOTS/: README.md  README_v2.md  UNIQUE_VALUE_PROPOSITION.md  VOTS_TOKENOMICS_ANALYSIS.md  requirements.txt  requirements_v2.txt  setup.sh
aave/: AAVE_BOT_README.md  AAVE_TRADE_MONITOR_README.md  aave_intelligence_analysis_2025.py  aave_intelligence_report_2025.json  aave_monitoring_dashboard.py  aave_monitoring_system.py  aave_trade_monitor.py  aave_trading_bot.py  aave_transaction_analysis.py  analyze_specific_token.py  base_token_analysis.py  check_balance.py  check_networks.py  find_aave_base.py  requirements_aave_bot.txt  zora_real_trade_log.txt  zora_trade_log.txt
advanced_ai_modules/: INTEGRATION_GUIDE.md  __init__.py
(+363 files in other folders)
